--- a/src/assets/css/tokens.css
+++ b/src/assets/css/tokens.css
@@ -2,10 +2,12 @@
 
   /* Color */
   --color-primary: #9E5CF2;
+  --color-primary-5: #F5EFFD;
   
   --color-secondary: #FF991F;
   
   --color-dark: #080808;
+  --color-dark-50: #454545;
 
   --color-black: #3E3232;
   --color-black-75: #3E3232;
@@ -26,6 +28,9 @@
   --spacing-32: 32px;
   --spacing-36: 36px;
   --spacing-40: 40px;
+  --spacing-60: 60px;
+  --spacing-80: 80px;
+
 
 
   /* Font Size */
@@ -46,6 +51,7 @@
   --font-weight-medium: 500;
   --font-weight-semi-bold: 600;
   --font-weight-bold: 700;
+  --font-weight-black: 900;
   
 
   /* Border Solid */
