--- a/src/assets/css/tokens.css
+++ b/src/assets/css/tokens.css
@@ -35,6 +35,8 @@
   --spacing-80: 80px;
   --spacing-92: 92px;
   --spacing-100: 100px;
+  --spacing-142: 142px;
+  --spacing-202: 202px;
 
 
 
@@ -48,6 +50,10 @@
   --font-size-32: 32px;
   --font-size-36: 36px;
   --font-size-40: 40px;
+  --font-size-44: 44px;
+  --font-size-48: 48px;
+  --font-size-56: 56px;
+  --font-size-96: 96px;
 
   /* Font Weight */
   --font-weight-thin: 100;
